Prepare for Generic Analytics API Schema
